JobController: do not create alternative job for those AlternativeServiceInfo whose advertised QUIC version does not contain any supported version by the net stack.

If the origin has more than one AlternativeServiceInfo(s), the one with
no client support will be ingore. If no AlternativeServiceInfo has client
support, the JobController will skip creating QUIC alternative job.

BUG=738232

Review-Url: https://codereview.chromium.org/2964603002
Cr-Commit-Position: refs/heads/master@{#484373}

Former-commit-id: ef3f4ce5a709ebccc5c88923c2fc45e969865af2